Fix a crash when trying to open the DiagnosticDialog

The possibility to discover the preferred phonon backend is gone
since its qt5 port, causing
'KServiceTypeTrader::self()->preferredService( "PhononBackend" )' to
return a null pointer, which causes a crash later on.
Instead I borrowed some code from the old phonon kcm from
plasma-desktop and slightly modified it.

BUG: 396907